--- a/ai/templates/index.html
+++ b/ai/templates/index.html
@@ -4,11 +4,17 @@
 <head>
     <title>WebSocket Client</title>
     <script>
-        const websocket = new WebSocket("ws://localhost:5000/");
-        websocket.onmessage = (event) => {
-            const alertData = JSON.parse(event.data);
-            console.log("Received alert: ", alertData);
+        const wsNearestClient = new WebSocket('ws://localhost:5000');
+        wsNearestClient.onopen = function () {
+            wsNearestClient.send(JSON.stringify({ "latitude": 41.2033, "longitude": -77.1945 }));
         };
+        wsNearestClient.onmessage = function (event) {
+            const data = JSON.parse(event.data);
+            if (data.event === 'all_clients') {
+                console.log('Data for nearest_client', data.message);
+            }
+        };
+
     </script>
 </head>
 
