--- a/ai/templates/arab.html
+++ b/ai/templates/arab.html
@@ -6,15 +6,11 @@
     <script>
         const wsNearestClient = new WebSocket('ws://localhost:5000');
         wsNearestClient.onopen = function () {
-            wsNearestClient.send(JSON.stringify({ "latitude": 24.0000, "longitude": 45.0000 }));
+            wsNearestClient.send(JSON.stringify({ "latitude": 24.0000, "longitude": 45.0000, "state": "apk" }));
         };
         wsNearestClient.onmessage = function (event) {
             const data = JSON.parse(event.data);
-            if (data.event === 'nearest_client') {
-                console.log('Data for nearest_client:', data.context);
-            } else if (data.event === 'all_clients') {
-                console.log('Data for all_clients:', data.context);
-            }
+            console.log(data)
         };
 
     </script>
