Separating web and apk

--- a/ai/templates/arab.html
+++ b/ai/templates/arab.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>New York Client</title>
+    <title>Arabia Client</title>
     <script>
         const wsNearestClient = new WebSocket('ws://localhost:5000');
         wsNearestClient.onopen = function () {
