--- a/ai/templates/get_image.html
+++ b/ai/templates/get_image.html
@@ -4,8 +4,13 @@
 <head>
     <title>Browser</title>
     <script>
-        const wsUri = "ws://0.0.0.0:5678";  // Replace with your specific server URI
+        const wsUri = "ws://0.0.0.0:11223/asdasdasd";  // Replace with your specific server URI
         const websocket = new WebSocket(wsUri);
+
+        websocket.onopen = function (event) {
+            console.log("WebSocket connection established.");
+            websocket.send(JSON.stringify({ token: "459ede94edbd1c8a1fc1a47194bebaf79523853e" }));
+        };
 
         websocket.onmessage = function (event) {
             const imagePaths = JSON.parse(event.data);
@@ -20,7 +25,7 @@
 </head>
 
 <body>
-<h1>Image GET Client</h1>
+    <h1>Image GET Client</h1>
 </body>
 
 </html>
