Last commit ever, but now seriously

--- a/ai/templates/get_image.html
+++ b/ai/templates/get_image.html
@@ -4,12 +4,12 @@
 <head>
     <title>Browser</title>
     <script>
-        const wsUri = "ws://0.0.0.0:11222/asdasdasd";  // Replace with your specific server URI
+        const wsUri = "ws://0.0.0.0:11222/asdasdasdweqweqwerwerasdasd";  // Replace with your specific server URI
         const websocket = new WebSocket(wsUri);
 
         websocket.onopen = function (event) {
             console.log("WebSocket connection established.");
-            websocket.send(JSON.stringify({ token: "459ede94edbd1c8a1fc1a47194bebaf79523853e" }));
+            websocket.send(JSON.stringify({ token: "43451218d4b71509ae1a81059fa3942e01a234c9" }));
         };
 
         websocket.onmessage = function (event) {
